# mlmat

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  better_docs.patch  knn5.maxpat  package-info.json
.github/workflows/: mac_main.yml  windows_main.yml
docs/: mlmat.convert.maxref.xml  mlmat.gmm.maxref.xml  mlmat.hmm.maxref.xml  mlmat.hoeffding_tree.maxref.xml  mlmat.id3_tree.maxref.xml  mlmat.kfn.maxref.xml  mlmat.kmeans.maxref.xml  mlmat.knn.maxref.xml  mlmat.linear_regression.maxref.xml  mlmat.linear_svm.maxref.xml  mlmat.load.maxref.xml  mlmat.lookup.maxref.xml  mlmat.mean_shift.maxref.xml  mlmat.mlp_classifier.maxref.xml  mlmat.mlp_regressor.maxref.xml  mlmat.pca.maxref.xml  mlmat.scaling.maxref.xml  mlmat.som.maxref.xml  mlmat.sparse_autoencoder.maxref.xml  mlmat.split.maxref.xml
examples/: kmeans example.maxpat  knn example.maxpat  mlmat data modes.maxpat  mlmat serialization.maxpat  mlmat utilities.maxpat  mlmat-pv-analysis~.maxpat  mlmat-pv-resynth~.maxpat  mlp regression example.maxpat  som example.maxpat  sparse auto encoder.maxpat  sparse autoencoder example.maxpat
extras/: mlmat overview.maxpat
help/: mlmat.concat.maxhelp  mlmat.convert.maxhelp  mlmat.gmm.maxhelp  mlmat.hmm.maxhelp  mlmat.hoeffding_tree.maxhelp  mlmat.id3_tree.maxhelp  mlmat.kfn.maxhelp  mlmat.kmeans.maxhelp  mlmat.knn.maxhelp  mlmat.linear_regression.maxhelp  mlmat.linear_svm.maxhelp  mlmat.load.maxhelp  mlmat.lookup.maxhelp  mlmat.mean_shift.maxhelp  mlmat.mlp_classifier.maxhelp  mlmat.mlp_regressor.maxhelp  mlmat.pca.maxhelp  mlmat.scaling.maxhelp  mlmat.som.maxhelp  mlmat.sparse_autoencoder.maxhelp  mlmat.split.maxhelp  mlmat.starter.maxhelp
init/: max-fileformats.txt
javascript/: mlmat_concat.js
jsextensions/: mlmat_concat.js
misc/: bach_1068.mid  fakedata.csv  gridshapes_shapes1.jxf  gridshapes_shapes2.jxf  mlmat-serialization-knn.json  object-docs.json  train.csv
patchers/: mlmat.concat.maxpat
projects/mlmat.hoeffding_tree/: mlmat.hoeffding_tree.cpp
projects/mlmat.kfn/: mlmat.kfn.cpp  mlmat.kfn_test.cpp
projects/mlmat.kmeans/: mlmat.kmeans_test.cpp
projects/mlmat.knn/: mlmat.knn_test.cpp
projects/mlmat.linear_svm/: mlmat.linear_svm_test.cpp
projects/mlmat.load/: mlmat.load.cpp
projects/mlmat.lookup/: mlmat.lookup.cpp  mlmat.lookup_test.cpp
projects/mlmat.mean_shift/: mlmat.mean_shift.cpp
projects/mlmat.mlp_regressor/: mlmat.mlp_regressor.cpp  mlmat.mlp_regressor_test.cpp
projects/mlmat.pca/: mlmat.pca.cpp
projects/mlmat.sparse_autoencoder/: mlmat.sparse_autoencoder.cpp  mlmat.sparse_autoencoder_test.cpp
projects/shared/: matrix_conversions.hpp  mlmat_operator.hpp  pca_ext.hpp
source/projects/mlmat.buffer_istft/: mlmat.buffer_istft.cpp
source/projects/mlmat.buffer_stft/: CMakeLists.txt  mlmat.buffer_stft.cpp
source/projects/mlmat.cat/: CMakeLists.txt  mlmat.cat.cpp  mlmat.cat_test.cpp
source/projects/mlmat.convert/: CMakeLists.txt  mlmat.convert.cpp  mlmat.convert_test.cpp
source/projects/mlmat.gmm/: CMakeLists.txt  mlmat.gmm.cpp  mlmat.gmm_test.cpp
source/projects/mlmat.hmm/: CMakeLists.txt  mlmat.hmm.cpp  mlmat.hmm_test.cpp
source/projects/mlmat.hoeffding_tree/: CMakeLists.txt  mlmat.hoeffding_tree.cpp  mlmat.hoeffding_tree_test.cpp
source/projects/mlmat.id3_tree/: CMakeLists.txt  mlmat.id3_tree.cpp  mlmat.id3_tree_test.cpp
source/projects/mlmat.kfn/: CMakeLists.txt  mlmat.kfn.cpp  mlmat.kfn_test.cpp
source/projects/mlmat.kmeans/: CMakeLists.txt  mlmat.kmeans.cpp  mlmat.kmeans_test.cpp
source/projects/mlmat.knn/: CMakeLists.txt  mlmat.knn.cpp  mlmat.knn_test.cpp
source/projects/mlmat.linear_regression/: CMakeLists.txt  mlmat.linear_regression.cpp  mlmat.linear_regression_test.cpp
source/projects/mlmat.linear_svm/: CMakeLists.txt  mlmat.linear_svm.cpp  mlmat.linear_svm_test.cpp
source/projects/mlmat.load/: CMakeLists.txt  mlmat.load.cpp  mlmat.load_test.cpp
source/projects/mlmat.lookup/: CMakeLists.txt  mlmat.lookup.cpp  mlmat.lookup_test.cpp
source/projects/mlmat.mean_shift/: CMakeLists.txt  mlmat.mean_shift.cpp  mlmat.mean_shift_test.cpp
source/projects/mlmat.mlp_classifier/: CMakeLists.txt  mlmat.mlp_classifier.cpp  mlmat.mlp_classifier_test.cpp
source/projects/mlmat.mlp_regressor/: CMakeLists.txt  mlmat.mlp_regressor.cpp  mlmat.mlp_regressor_test.cpp
source/projects/mlmat.nmf/: mlmat.nmf.cpp
source/projects/mlmat.pca/: CMakeLists.txt  mlmat.pca.cpp  mlmat.pca_test.cpp
source/projects/mlmat.radical/: CMakeLists.txt  mlmat.radical.cpp
source/projects/mlmat.scaling/: CMakeLists.txt  mlmat.scaling.cpp  mlmat.scaling_test.cpp
source/projects/mlmat.som/: CMakeLists.txt  mlmat.som.cpp  mlmat.som_test.cpp
source/projects/mlmat.sparse_autoencoder/: CMakeLists.txt  mlmat.sparse_autoencoder.cpp  mlmat.sparse_autoencoder_test.cpp
source/projects/mlmat.split/: CMakeLists.txt  mlmat.split.cpp  mlmat.split_test.cpp
source/projects/mlmat.variational_autoencoder/: CMakeLists.txt  mlmat.variational_autoencoder.cpp  mlmat.variational_autoencoder_test.cpp
source/projects/shared/: matrix_conversions.hpp  mlmat.hpp  mlmat_object.hpp  mlmat_operator.hpp  pca_ext_impl.hpp  sparse_autoencoder_ext.cpp  sparse_autoencoder_ext.hpp  sparse_autoencoder_ext_impl.hpp  sparse_autoencoder_function.cpp  sparse_autoencoder_function.hpp
tests/: mlmat.convert_test  mlmat.id3_tree_test  mlmat.kmeans_test  mlmat.linear_regression_test  mlmat.linear_svm_test  mlmat.load_test  mlmat.lookup_test  mlmat.mean_shift_test  mlmat.pca_test  mlmat.scaling_test  mlmat.som_test  mlmat.sparse_autoencoder_test  mlmat.split_test
